--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -72,14 +72,14 @@ import { GET } from "./word.json";
       data.words.map((word: string) => ({ source: node.id, target: word }))
     );
     if (nodes.find((n) => n.id === goal && !won)) {
-      Graph.zoomToFit(1000, isMobile() ? 100 : 350);
+      Graph.zoomToFit(1000, isMobile() ? 100 : 250);
       capturing = true;
       let file: File;
-      Graph.linkWidth(1);
+      Graph.linkWidth(3);
       setTimeout(async () => {
         const originalCanvas = document.querySelector("canvas")!;
         const heightToUse = isMobile() ? originalCanvas.height / 2 : originalCanvas.height;
-        const desiredWidth = 500
+        const desiredWidth = 1500;
         const desiredHeight = desiredWidth * (heightToUse / originalCanvas.width);
         let startingY = isMobile() ? originalCanvas.height / 4 : 0;
         let endingY = isMobile() ? 3 * originalCanvas.height / 4 : originalCanvas.height;
