--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
+import  SpeedInsights  from "@vercel/speed-insights/astro"
 
 import { GET } from "./word.json";
 ---
@@ -326,6 +327,7 @@ import { GET } from "./word.json";
 </script>
 
 <Layout title="Semantical">
+  <SpeedInsights />
   <main>
     <h1 class="absolute p-4 text-3xl text-primary" id="goal"></h1>
     <div id="graph">
